Scrollbar fixes for Menu

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -59,7 +59,7 @@ $color-tertiary-shadow: rgba($color-tertiary, $-shadow);
 * { box-sizing: border-box; }
 
 body {
-  height: 200vh; // TESTING
+  // height: 200vh; // TESTING
   font-family: $font-rosario;
   background-color: var(--color-dark, $color-dark);
 }
@@ -287,17 +287,18 @@ h1, h2, h3, h4, h5, h6, p {
   display: flex;
   flex-direction: column;
   position: fixed;
-  height: 100vh;
+  // height: 100%;
+  // height: 100vh;
   top: 0;
   left: 0;
+  bottom: 0;
   z-index: 2;
-  min-height: 600px;
+  // min-height: 500px;
   transform: translateX(100%);
   background-color: var(--color-black, $color-black);
   grid-column: 1 / 3;
   width: 100%;
-  min-height: 600px;
-  overflow-y: auto;
+  overflow: auto;
   
   &.js-mobile { transition: all 0.75s; }
   
@@ -341,10 +342,6 @@ h1, h2, h3, h4, h5, h6, p {
     &__item {
       text-align: center;
 
-      &:not(:last-child) {
-        // margin-bottom: 3rem;
-        // margin-bottom: 1.5rem;
-      }
     }
     &__link {
       padding-top: 1.5rem;
@@ -369,13 +366,13 @@ h1, h2, h3, h4, h5, h6, p {
 
   .social-icons {
     flex: 1;
-    justify-self: end;
     align-self: end;
     display: flex;
     align-items: end;
     justify-content: center;
     width: 100%;
-    margin-bottom: 0.5rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
 
     $-link-dimensions: 2.25rem;
     $-svg-dimensions: $-link-dimensions * 0.55;
